--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="https://cdn.metroui.org.ua/current/metro.css">
   <script src="https://unpkg.com/interactjs/dist/interact.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="scripts/WinFunc.js"></script>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="styles/style.css"/>
   <title>OpenDelta</title>
@@ -13,18 +14,23 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="shadow-lg">
   <div id="desktop">
-    <div class="window shadow-lg rounded-lg bg-white resize" data-role="draggable", data-drag-element=".titlebar">
-      <div class="titlebar">
-
+    <div id="window1" class="window shadow-lg rounded-lg bg-white resize" data-role="draggable", data-drag-element=".titlebar">
+      <div class="pl-3 pr-3 titlebar cursor-move font-sans flex items-center font-medium justify-between">
+        window name goes here
+        <div class="flex-row flex">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 25 25" stroke-width="1.5" stroke="currentColor" class="w-6 h-6" onclick="closewin('window1')">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
+          </svg>          
+        </div>
       </div>
       <div class="window-content">
-        
+
       </div>
     </div>
   </div>
-  <div class="container mx-auto bg-slate-50 rounded-lg pt-3 pb-3 flex-row flex">
+  <div class="container mx-auto rounded-lg pt-3 pb-3 flex-row flex shadow-lg bg-slate-50/75 backdrop-blur-md z-50">
     <img src="assets/menu.png" width="30px" height="30px"></img>
     <img src="assets/search.png" width="30px" height="30px" class="ml-2"></img>
   </div>
