--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="https://cdn.metroui.org.ua/current/metro.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://unpkg.com/interactjs/dist/interact.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="scripts/WinFunc.js"></script>
@@ -20,10 +21,10 @@
       <div class="pl-3 pr-3 titlebar cursor-move font-sans flex items-center font-medium justify-between">
         window name goes here
         <div class="flex-row flex">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 25 25" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-3">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 25 25" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-3 cursor-pointer">
             <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
           </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 25 25" stroke-width="1.5" stroke="currentColor" class="w-6 h-6" onclick="closewin('window1')">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 25 25" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 cursor-pointer" onclick="closewin('window1')">
             <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
           </svg>         
         </div>
@@ -35,7 +36,7 @@
       </div>
     </div>
   </div>
-  <div class="container mx-auto rounded-lg pt-3 pb-3 flex-row flex shadow-lg bg-slate-50/75 backdrop-blur-md z-50">
+  <div class="pl-3 pr-3 mx-auto pt-3 pb-3 flex-row flex shadow-lg bg-slate-50/75 backdrop-blur-md z-50">
     <img src="assets/menu.png" width="30px" height="30px"></img>
     <img src="assets/search.png" width="30px" height="30px" class="ml-2"></img>
   </div>
