--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <html>
 <head>
-  <link rel="stylesheet" href="https://cdn.metroui.org.ua/current/metro.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
   <script src="https://unpkg.com/interactjs/dist/interact.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="scripts/WinFunc.js"></script>
@@ -17,7 +17,7 @@
 </head>
 <body class="shadow-lg">
   <div id="desktop">
-    <div id="window1" class="window shadow-lg rounded-lg bg-white resize" data-role="draggable", data-drag-element=".titlebar">
+    <div id="window1" class="window shadow-lg rounded-lg bg-white resize">
       <div class="pl-3 pr-3 titlebar cursor-move font-sans flex items-center font-medium justify-between">
         window name goes here
         <div class="flex-row flex">
@@ -37,9 +37,8 @@
     </div>
   </div>
   <div class="pl-3 pr-3 mx-auto pt-3 pb-3 flex-row flex shadow-lg bg-slate-50/75 backdrop-blur-md z-50">
-    <img src="assets/menu.png" width="30px" height="30px"></img>
+    <img src="assets/menu.png" width="30px" height="30px" onclick="newwin()"></img>
     <img src="assets/search.png" width="30px" height="30px" class="ml-2"></img>
   </div>
-  <script src="https://cdn.metroui.org.ua/current/metro.js"></script>
 </body>
 </html>
