--- a/elements/window.html
+++ b/elements/window.html
@@ -1,4 +1,4 @@
-<div id="newwindow" class="window shadow-lg rounded-lg bg-white resize">
+<div id="newwindow" class="window shadow-lg rounded-lg resize bg-slate-50/80 backdrop-blur-lg">
     <div id="newwindowtitlebar" class="pl-3 pr-3 titlebar cursor-move font-sans flex items-center font-medium justify-between">
       window name goes here
       <div class="flex-row flex">
@@ -10,9 +10,12 @@
         </svg>         
       </div>
     </div>
-    <div class="window-content grid place-items-center">
-      <button type="button" class="bg-violet-500 hover:bg-violet-600 focus:outline-none focus:ring focus:ring-violet-300 active:bg-violet-700 px-5 py-2 text-sm leading-5 rounded-full font-semibold text-white" onclick="console.log(openwins())">
-        Log Open Windows
-      </button>
+    <div class="window-content place-content-center">
+        <a class="group block max-w-xs mx-auto rounded-lg p-6 bg-white ring-1 ring-slate-900/5 shadow-lg space-y-3 hover:bg-sky-500 hover:ring-sky-500 mb-5" onclick="$('.window').addClass('shadow-lg bg-slate-50/80 backdrop-blur-lg');$('.window').removeClass('bg-white ring-1 ring-slate-900/5');$('#taskbar').addClass('shadow-lg bg-slate-50/75 backdrop-blur-md');$('#taskbar').removeClass('bg-white ring-1 ring-slate-900/5');">
+            <h3 class="text-slate-900 group-hover:text-white text-sm font-semibold">Full Theme</h3>
+        </a>
+        <a class="group block max-w-xs mx-auto rounded-lg p-6 bg-white ring-1 ring-slate-900/5 shadow-lg space-y-3 hover:bg-sky-500 hover:ring-sky-500" onclick="$('.window').removeClass('shadow-lg bg-slate-50/80 backdrop-blur-lg');$('.window').addClass('bg-white ring-1 ring-slate-900/5');$('#taskbar').removeClass('shadow-lg bg-slate-50/75 backdrop-blur-md');$('#taskbar').addClass('bg-white ring-1 ring-slate-900/5');">
+            <h3 class="text-slate-900 group-hover:text-white text-sm font-semibold">Basic Theme</h3>
+        </a>
     </div>
 </div>
