--- a/index.html
+++ b/index.html
@@ -17,26 +17,8 @@
 </head>
 <body class="shadow-lg">
   <div id="desktop">
-    <div id="window1" class="window shadow-lg rounded-lg bg-white resize">
-      <div class="pl-3 pr-3 titlebar cursor-move font-sans flex items-center font-medium justify-between">
-        window name goes here
-        <div class="flex-row flex">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 25 25" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-3 cursor-pointer">
-            <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-          </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 25 25" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 cursor-pointer" onclick="closewin('window1')">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
-          </svg>         
-        </div>
-      </div>
-      <div class="window-content grid place-items-center">
-        <button type="button" class="bg-violet-500 hover:bg-violet-600 focus:outline-none focus:ring focus:ring-violet-300 active:bg-violet-700 px-5 py-2 text-sm leading-5 rounded-full font-semibold text-white" onclick="console.log(openwins())">
-          Log Open Windows
-        </button>
-      </div>
-    </div>
   </div>
-  <div class="pl-3 pr-3 mx-auto pt-3 pb-3 flex-row flex shadow-lg bg-slate-50/75 backdrop-blur-md z-50">
+  <div id="taskbar" class="pl-3 pr-3 mx-auto pt-3 pb-3 flex-row flex shadow-lg bg-slate-50/75 backdrop-blur-md z-50">
     <img src="assets/menu.png" width="30px" height="30px" onclick="newwin()"></img>
     <img src="assets/search.png" width="30px" height="30px" class="ml-2"></img>
   </div>
