added newwinfromurl() to create a new window from a hosted html file

--- a/elements/window.html
+++ b/elements/window.html
@@ -12,12 +12,12 @@
     </div>
     <div class="window-content">
       <div id="termoutput" class="container">
-        <div class="mt-2 bg-gray-500/10 backdrop-blur-lg text-sm text-white rounded-lg p-4 mb-5 ml-5 mr-5" role="alert">
+        <div class="mt-2 bg-gray-500/10 backdrop-blur-lg text-sm text-white rounded-lg p-4 mb-5 ml-5 mr-5 break-words" role="alert">
           <span class="font-bold">Application:</span> Welcome to Float, the terminal for OpenDelta.
         </div>
       </div>
       <div class="ml-5 mr-5 mb-5">
-        <input id="ConsoleTB" type="text" class="py-3 px-4 block w-full border-gray-200 rounded-lg text-sm bg-gray-500/10 backdrop-blur-lg" placeholder="Enter Console Command" onkeydown="termruncode(event)">
+        <input id="ConsoleTB" type="text" class="py-3 px-4 block w-full border-gray-200 rounded-lg text-sm bg-gray-500/10 backdrop-blur-lg text-gray-100" placeholder="Enter Console Command" onkeydown="termruncode(event)">
       </div>
     </div>
 </div>
