changed from plain css resizable to jquery ui resizable

--- a/elements/filesapp.html
+++ b/elements/filesapp.html
@@ -11,6 +11,7 @@
       </div>
     </div>
     <div class="window-content place-content-center bg-white">
-    
+      <div class="header h-16"></div>
+      <div id="filepanel" class="h-full bg-slate-50></div>
     </div>
 </div>
