--- a/elements/window.html
+++ b/elements/window.html
@@ -1,4 +1,4 @@
-<div id="newwindow" class="window shadow-lg rounded-lg resize bg-slate-800 backdrop-blur-lg">
+<div id="newwindow" class="window shadow-lg rounded-lg resizable bg-slate-800 backdrop-blur-lg">
     <div id="newwindowtitlebar" class="pl-5 pr-3 titlebar cursor-move font-sans flex items-center font-medium justify-between text-gray-100">
       Terminal
       <div class="flex-row flex">
