wallpapers, and windraw

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <script src="https://unpkg.com/interactjs/dist/interact.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="scripts/WinFunc.js"></script>
+  <script src="scripts/Windraw.js"></script>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="styles/style.css"/>
+  <link rel="stylesheet" href="styles/poppinsfont.css"/>
   <title>OpenDelta</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
